# foolhex

./: .gitmodules  CMakeLists.txt  README.md
docs/: aliastype.conf  struct.def
src/: BasicTypeManagerDialog.cpp  BasicTypeManagerDialog.h  BindingType.cpp  BindingType.h  FakeType.cpp  FakeType.h  HexEditorWindow.cpp  HexEditorWindow.h  HexTable.cpp  HexTable.h  LargeFile.cpp  LargeFile.h  LoadStruct.cpp  LoadStruct.h  kmp.cpp  kmp.h  main.cpp
